--- a/templates/allocation_list.html
+++ b/templates/allocation_list.html
@@ -106,7 +106,7 @@
                         <td class="text-end pe-4">
                             <div class="btn-group shadow-sm rounded-3 overflow-hidden">
                                 <!-- PDF -->
-                                <a href="{{ url_for('download_morning_pdf', alloc_id=alloc.id) }}" class="btn btn-sm btn-light border-end" title="Download PDF">
+                                <a href="{{ url_for('generate_morning_pdf', alloc_id=alloc.id) }}" class="btn btn-sm btn-light border-end" title="Download PDF">
                                     <i class="fa-solid fa-file-pdf text-danger"></i>
                                 </a>
                                 
