--- a/templates/admin_master.html
+++ b/templates/admin_master.html
@@ -203,6 +203,13 @@
                 </a>
             </li>
 
+            
+            <li class="nav-item">
+                <a href="{{ url_for('office_sales_master') }}" class="nav-link">
+                    <i class="fa-solid fa-file-invoice-dollar"></i> Sales
+                </a>
+            </li>
+
             <li class="nav-item">
                 <a href="{{ url_for('employee_master') }}" class="nav-link">
                     <i class="fa-solid fa-users"></i> Employees
@@ -290,5 +297,6 @@
     {% block page_scripts %}{% endblock %}
 </body>
 </html>
+
 
 
